--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,3 @@
 [build]
-  publish = "public"
+  publish = "."
   functions = "netlify/functions"
-
-[[redirects]]
-  from = "/api/predict"
-  to = "/.netlify/functions/predict"
-  status = 200
